erDiagram
  action_vocabulary {
    TEXT id PK
    TEXT normalized_action_family 
    TEXT examples 
    TEXT do_not_use_as_proof 
    TEXT created_at 
  }
  activities {
    INTEGER id PK
    TEXT name 
    TEXT type 
    TEXT instructions 
    TEXT materials_needed 
    TEXT age_range 
    INTEGER duration_minutes 
    INTEGER source_id 
  }
  book_suggestions {
    INTEGER id PK
    TEXT title 
    TEXT author 
    TEXT description 
    TEXT age_range 
    TEXT isbn 
    TEXT url 
  }
  curriculum_topic_songs {
    TEXT id PK
    TEXT curriculum_topic_id FK
    TEXT search_chunk_id FK
    TEXT link_type 
    TEXT created_at 
    INTEGER topic_id FK
  }
  search_chunks ||--o{ curriculum_topic_songs : "search_chunk_id"
  curriculum_topics ||--o{ curriculum_topic_songs : "curriculum_topic_id"
  topics ||--o{ curriculum_topic_songs : "topic_id"
  curriculum_topics {
    TEXT id PK
    TEXT grade_key 
    TEXT grade 
    INTEGER early_years 
    TEXT subject 
    TEXT category 
    INTEGER seq_number 
    TEXT lesson_topic 
    TEXT skill_statement 
    TEXT standards 
    INTEGER song_count 
    TEXT linked_songs 
    TEXT linked_resources 
    TEXT tags 
    TEXT circle_time_slot 
    TEXT created_at 
    TEXT updated_at 
  }
  grades {
    INTEGER id PK
    TEXT key 
    TEXT label 
    TEXT age_range 
    INTEGER sort_order 
  }
  import_batches {
    INTEGER id PK
    TEXT migration_id FK
    TEXT source_name 
    TEXT source_path 
    TEXT source_sha256 
    TEXT imported_at 
  }
  schema_migrations ||--o{ import_batches : "migration_id"
  lesson_assets {
    INTEGER id PK
    INTEGER topic_id FK
    TEXT asset_type 
    TEXT title 
    TEXT description 
    TEXT file_path 
    TEXT format 
    TEXT generation_prompt 
    TEXT visual_notes 
    TEXT status 
    TEXT created_at 
    TEXT updated_at 
  }
  topics ||--o{ lesson_assets : "topic_id"
  material_relations {
    INTEGER id PK
    TEXT from_kind 
    INTEGER from_id 
    TEXT relation_type 
    TEXT to_kind 
    INTEGER to_id 
  }
  material_tags {
    INTEGER id PK
    TEXT material_kind 
    INTEGER material_id 
    INTEGER tag_id FK
  }
  tags ||--o{ material_tags : "tag_id"
  research_queue {
    TEXT id PK
    INTEGER priority 
    TEXT resource 
    TEXT why_it_matters 
    TEXT source_url 
    TEXT download_filename 
    TEXT assigned_to 
    TEXT status 
    TEXT notes 
    TEXT created_at 
    TEXT updated_at 
  }
  research_sources {
    TEXT id PK
    TEXT educator_org 
    TEXT source_title 
    TEXT source_type 
    TEXT age_setting 
    TEXT songs_covered 
    TEXT direct_url 
    TEXT local_pdf_filename 
    TEXT download_status 
    TEXT research_notes 
    TEXT created_at 
    TEXT updated_at 
  }
  resources {
    INTEGER id PK
    TEXT name 
    TEXT type 
    TEXT description 
    TEXT url 
    INTEGER free 
    INTEGER paywalled 
    INTEGER verified 
    INTEGER source_id FK
  }
  sources ||--o{ resources : "source_id"
  schema_migrations {
    TEXT migration_id PK
    TEXT applied_at 
    TEXT omhas_sha256 
    TEXT curriculum_sha256 
    TEXT generated_sha256 
  }
  search_chunk_sources {
    TEXT search_chunk_id PKFK
    INTEGER source_document_id PKFK
  }
  source_documents ||--o{ search_chunk_sources : "source_document_id"
  search_chunks ||--o{ search_chunk_sources : "search_chunk_id"
  search_chunks {
    TEXT id PK
    TEXT kind 
    TEXT source_path 
    TEXT url 
    TEXT title 
    TEXT chunk_text 
    TEXT lyrics 
    TEXT instructions 
    TEXT embedding 
    TEXT meta 
    TEXT created_at 
    TEXT updated_at 
  }
  song_action_chunks {
    TEXT id PK
    TEXT song_action_id 
    TEXT search_chunk_id 
    TEXT created_at 
  }
  song_actions {
    TEXT id PK
    TEXT song_title 
    TEXT alternate_title 
    TEXT tradition_performer 
    TEXT action_wording 
    TEXT normalized_action 
    TEXT action_sequence 
    TEXT song_cue 
    TEXT action_classification 
    TEXT core_or_optional 
    TEXT age_range_stated 
    TEXT educator_org 
    TEXT source_title 
    TEXT source_type 
    TEXT page_timestamp 
    TEXT source_url 
    TEXT evidence_note 
    TEXT research_status 
    TEXT reviewer_notes 
    TEXT created_at 
    TEXT updated_at 
  }
  song_curriculum_links {
    INTEGER id PK
    INTEGER song_id FK
    TEXT subject 
    TEXT description 
    TEXT relevance 
    TEXT link_type 
  }
  songs ||--o{ song_curriculum_links : "song_id"
  songs {
    INTEGER id PK
    TEXT title 
    TEXT artist 
    TEXT catalog 
    TEXT lyrics 
    TEXT url 
    TEXT instructions 
    TEXT actions 
    TEXT age_range 
    INTEGER source_id FK
    INTEGER verified 
    TEXT type 
    TEXT educational_domain 
    TEXT materials_needed 
    TEXT tags 
    TEXT creator_artist 
    TEXT source_title 
    TEXT curriculum_links 
    TEXT early_years_links 
    TEXT markdown_path 
  }
  sources ||--o{ songs : "source_id"
  source_documents {
    INTEGER id PK
    TEXT source_path 
    TEXT source_kind 
    TEXT review_state 
    TEXT checksum 
    TEXT imported_at 
  }
  sources {
    INTEGER id PK
    TEXT path_or_url 
    TEXT type 
    TEXT checksum 
  }
  standards {
    INTEGER id PK
    INTEGER parent_standard_id FK
    TEXT framework 
    TEXT code 
    TEXT full_text 
    TEXT source 
    TEXT external_id 
  }
  standards ||--o{ standards : "parent_standard_id"
  subjects {
    INTEGER id PK
    TEXT key 
    TEXT label 
    INTEGER sort_order 
  }
  tags {
    INTEGER id PK
    INTEGER parent_tag_id FK
    TEXT name 
    TEXT definition 
  }
  tags ||--o{ tags : "parent_tag_id"
  topic_grades {
    INTEGER id PK
    INTEGER topic_id FK
    INTEGER grade_id FK
  }
  grades ||--o{ topic_grades : "grade_id"
  topics ||--o{ topic_grades : "topic_id"
  topic_materials {
    INTEGER id PK
    INTEGER topic_id FK
    TEXT material_kind 
    INTEGER material_id 
    TEXT role 
    TEXT use_in_phase 
    TEXT routine_slot 
    TEXT teacher_rationale 
  }
  topics ||--o{ topic_materials : "topic_id"
  topic_standards {
    INTEGER id PK
    INTEGER topic_id FK
    INTEGER standard_id FK
    TEXT alignment_notes 
  }
  standards ||--o{ topic_standards : "standard_id"
  topics ||--o{ topic_standards : "topic_id"
  topic_tags {
    INTEGER id PK
    INTEGER topic_id FK
    INTEGER tag_id FK
  }
  tags ||--o{ topic_tags : "tag_id"
  topics ||--o{ topic_tags : "topic_id"
  topics {
    INTEGER id PK
    INTEGER subject_id FK
    TEXT category 
    TEXT topic 
    TEXT skill 
    REAL sequence 
    TEXT taught_status 
    INTEGER merged_into FK
    TEXT circle_time 
  }
  subjects ||--o{ topics : "subject_id"
  topics ||--o{ topics : "merged_into"
  weekly_pacing {
    INTEGER id PK
    INTEGER topic_grade_id FK
    INTEGER week_number 
    TEXT month 
    TEXT notes 
  }
  topic_grades ||--o{ weekly_pacing : "topic_grade_id"

